kubernetes/party-battle/backend/versions/v1.3.7/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: party-battle-backend-v1-3-7
  labels:
    app: party-battle-backend-v1-3-7

spec:
  replicas: 1
  selector:
    matchLabels:
      app: party-battle-backend-v1-3-7
  template:
    metadata:
      labels:
        app: party-battle-backend-v1-3-7
    spec:
      containers:
        - name: party-battle-backend
          image: ghcr.io/thirty-degrees/backend-party-battle:3638fd265aa4cb056199160a4709de764b547c09
          ports:
            - name: api
              containerPort: 2567
      imagePullSecrets:
        - name: ghcr-secret
