kubernetes/party-battle/backend/versions/v1.3.7/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: party-battle-backend-v1-3-7

spec:
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 2567
  selector:
    app: party-battle-backend-v1-3-7
